@@ -1,10 +1,10 @@
 #define RUBY_VERSION "2.0.0"
-#define RUBY_RELEASE_DATE "2015-12-16"
-#define RUBY_PATCHLEVEL 648
+#define RUBY_RELEASE_DATE "2017-09-14"
+#define RUBY_PATCHLEVEL 649
 
-#define RUBY_RELEASE_YEAR 2015
-#define RUBY_RELEASE_MONTH 12
-#define RUBY_RELEASE_DAY 16
+#define RUBY_RELEASE_YEAR 2017
+#define RUBY_RELEASE_MONTH 09
+#define RUBY_RELEASE_DAY 14
 
 #include "ruby/version.h"
 
